# system-bridge

./: .actrc  .editorconfig  .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .markdownlintignore  .mdlrc  .yamllint.yml  .yarnclean  .yarnrc.yml  AGENTS.md  CLAUDE.md  COMMAND_EXECUTION_FEATURE.md  CONTEXT.md  COPILOT.md  CPU_CHANGES_LOG.md  CRASH_PREVENTION_FIXES.md  DRAFT_PR.md  Dockerfile  Dockerfile.build  Dockerfile.build-ci-ubuntu  Dockerfile.ci-build-arch  Dockerfile.ci-build-ubuntu  Dockerfile.dev  FRONTEND_IMPROVEMENTS.md  HA_SB_REPORT.md  Info.plist  LICENSE  Makefile  PLAN.md  README.md  TASKS.md  TEST_SUMMARY.md  TODO.md  appdmg.json  application.py  application_backend.py  application_gui.py  build.json  (+39 more)
.agents/: REVIEW-FOR-DELETION.md  architecture.md  go-style.md  packaging.md  platform-support.md  testing.md  troubleshooting.md  typescript-style.md
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yaml  dependabot.yml  labels.yml  release-drafter.yml
.legacy/: .editorconfig  .mdl.rb  README.md  mlc_config.json  package.json  setup.ps1  setup.sh  systembridge.desktop
.resources/: system-bridge-circle.icns  system-bridge-dimmed.icns  system-bridge.rc
.scripts/: verify-css.sh
assert/: assert.go
backend/: .gitignore  __init__.py  backend.go  pyproject.toml  requirements.txt  requirements_windows.txt  setup.py  websocket.go
bus/: bus.go  bus_test.go
cli/: pyproject.toml  requirements.txt  requirements_setup.txt  setup.py
config/: config.go  default.json  production.json  utils.go
configuration/: package.json
connector/: pyproject.toml  requirements.txt  setup.py
data/: data.go  data_store.go  data_test.go  playerctl_linux.go  playerctl_stub.go  update.go
db/: users.db
discovery/: dhcp.go  discovery.go  mdns.go  ssdp.go
event/: event.go  event_test.go  event_types.go  response_types.go
frontend/: .eslintrc.js  .gitignore  .mdl.rb  .yamllint.yml  .yarnclean  README.md  package.json  setup.py  tsconfig.json
gui/: .gitignore  __init__.py  main.py  package.json  pyproject.toml  requirements.txt  setup.py  system-bridge-gui.spec  system-bridge.pyproject  tsconfig.json
legacy/: bun.lockb  installer.nsi  requirements_linux.txt
logger/: logger.go
modules/: modules.go  system.go
player/: package.json
public/: browserconfig.xml  index.html  site.webmanifest
rtc/: package.json
schemas/: action.json  get_data.json  keyboard.json  notification.json  open.json  register_data_listener.json  request.json  response.json  update.json
scripts/: Info.plist  copy-frontend-to-public.js  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  api_routes.rs  autostart.rs  backend.rs  event.rs  gui.rs  logger.rs  main.rs  model.rs  module.rs  modules.rs  resources.rs  run.rs  settings.rs  shared.rs  websocket.rs  websocket_client.rs
src-tauri/src/api/: mod.rs  routes.rs
src-tauri/src/modules/: battery.rs  cpu.rs  disks.rs  displays.rs  gpus.rs  media.rs  memory.rs  mod.rs  networks.rs  processes.rs  sensors.rs  system.rs
src-tauri/src/websocket/: client.rs  mod.rs  server.rs
(+1456 files in other folders)
