[package]
name = "systembridge"
version = "4.1.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.10", features = [] }

[dependencies]
fastrand = "2.0.2"
fern = { version = "0.6.2", features = ["colored"] }
futures = "0.3.30"
futures-util = "0.3.30"
http = "1.1.0"
humantime = "2.1.0"
log = "0.4.21"
platform-dirs = "0.3.0"
reqwest = "0.12.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
sysinfo = "0.30.8"
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
tauri-plugin-autostart = "2.0.0-beta.4"
tauri-plugin-clipboard-manager = "2.0.0-beta.2"
tauri-plugin-shell = "2.0.0-beta"
tokio = { version = "1.37.0", features = ["full"] }
tokio-websockets = { version = "0.7.0", features = [
  "client",
  "fastrand",
  "ring",
] }
uuid = { version = "1.8.0", features = ["v4"] }
