[package]
name = "systembridge"
version = "4.1.13"
description = "System Bridge"
authors = ["timmo001"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.7", features = [] }

[dependencies]
ctrlc = "3.4.5"
fastrand = "2.1.1"
fern = { version = "0.6.2", features = ["colored"] }
futures = "0.3.30"
futures-util = "0.3.30"
http = "1.1.0"
humantime = "2.1.0"
log = "0.4.22"
platform-dirs = "0.3.0"
reqwest = "0.12.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
sysinfo = "0.31.4"
tauri = { version = "2.0.0-rc.6", features = ["tray-icon"] }
tauri-plugin-autostart = "2.0.0-rc.0"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
tauri-plugin-shell = "2.0.0-rc.2"
tokio = { version = "1.40.0", features = ["full"] }
tokio-websockets = { version = "0.9.0", features = [
  "client",
  "fastrand",
  "ring",
] }
uuid = { version = "1.10.0", features = ["v4"] }
